css (fix): long messages overflow container

--- a/less/forum.less
+++ b/less/forum.less
@@ -17,7 +17,7 @@
       .ChatMessage {
         display: grid;
         grid-auto-flow: column;
-        grid-auto-columns: max-content;
+        grid-auto-columns: auto 1fr;
         gap: 1rem;
         padding: .25rem .2rem;
 
@@ -39,6 +39,10 @@
           .username {
             font-weight: 700;
           }
+        }
+
+        main {
+          word-break: break-all;
         }
       }
     }
